--- a/package.xml
+++ b/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>marvin_ros2_control</name>
   <version>0.0.0</version>
-  <description>tj2 ROS2 Control Hardware Interface</description>
-  <maintainer email="rokae@example.com">Rokae Team</maintainer>
+  <description>Marvin ROS2 Control Hardware Interface</description>
+  <maintainer email="fiveages@example.com">FiveAges Team</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -14,6 +14,7 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>sensor_msgs</depend>
   <depend>pluginlib</depend>
+  <depend>gripper_hardware_common</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
@@ -23,7 +24,6 @@
 
   <export>
     <build_type>ament_cmake</build_type>
-    <hardware_interface plugin="${prefix}/dobot_ros2_control.xml"/>
-    <pluginlib_export_plugin_file>marvin_ros2_control_plugin_description.xml</pluginlib_export_plugin_file>
+    <hardware_interface plugin="${prefix}/marvin_ros2_control.xml"/>
   </export>
 </package>
